ignored-files/nohup.out
[Database] Initializing
[App] Initializing
[Api] Initializing
[Database] Initializing
[App] Initializing
[Api] Initializing
[Database] Initializing
[App] Initializing
[Api] Initializing
undefined:169
                    255,
                        

SyntaxError: Unexpected end of JSON input
    at JSON.parse (<anonymous>)
    at /home/lukaprij/UNIVERSITY-Diploma-Assignment/server/tables/BasicTable.js:160:18
    at FSReqWrap.readFileAfterClose [as oncomplete] (internal/fs/read_file_context.js:53:3)
[Database] Initializing
[App] Initializing
[Api] Initializing
[0mGET /clientAdmin [32m200 [0m10.782 ms - 1090[0m
[0mGET /stylesheets/common.css [32m200 [0m2.878 ms - 1273[0m
[0mGET /stylesheets/client-admin.css [32m200 [0m0.680 ms - 1136[0m
[0mGET /javascripts/socket.io/socket.io.js [32m200 [0m0.377 ms - 62421[0m
[0mGET /javascripts/html.js [32m200 [0m0.355 ms - 2823[0m
[0mGET /javascripts/helper.js [32m200 [0m0.428 ms - 942[0m
[0mGET /javascripts/client-admin.js [32m200 [0m0.300 ms - 3336[0m
[0mGET /javascripts/socket.io/socket.io.js.map [32m200 [0m0.446 ms - 401944[0m
[Api] New client has connected!
[Database] Initializing
[App] Initializing
[Api] Initializing
[Database] Initializing
[App] Initializing
[Api] Initializing
events.js:167
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE :::30003
    at Server.setupListenHandle [as _listen2] (net.js:1328:14)
    at listenInCluster (net.js:1376:12)
    at Server.listen (net.js:1463:7)
    at Server.listen.Server.attach (/home/lukaprij/UNIVERSITY-Diploma-Assignment/node_modules/socket.io/lib/index.js:273:9)
    at new Server (/home/lukaprij/UNIVERSITY-Diploma-Assignment/node_modules/socket.io/lib/index.js:59:17)
    at Function.Server [as listen] (/home/lukaprij/UNIVERSITY-Diploma-Assignment/node_modules/socket.io/lib/index.js:44:41)
    at Object.<anonymous> (/home/lukaprij/UNIVERSITY-Diploma-Assignment/server/api.js:5:19)
    at Module._compile (internal/modules/cjs/loader.js:702:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:713:10)
    at Module.load (internal/modules/cjs/loader.js:612:32)
Emitted 'error' event at:
    at emitErrorNT (net.js:1355:8)
    at process._tickCallback (internal/process/next_tick.js:63:19)
    at Function.Module.runMain (internal/modules/cjs/loader.js:746:11)
    at startup (internal/bootstrap/node.js:240:19)
    at bootstrapNodeJSCore (internal/bootstrap/node.js:564:3)

> client@0.0.0 start /home/lukaprij/UNIVERSITY-Diploma-Assignment
> node ./bin/www

[Database] Initializing
[App] Initializing
[Api] Initializing
[0mGET /clientAdmin [32m200 [0m10.215 ms - 1090[0m
[0mGET /stylesheets/common.css [32m200 [0m2.240 ms - 1273[0m
[0mGET /stylesheets/client-admin.css [32m200 [0m0.468 ms - 1136[0m
[0mGET /javascripts/socket.io/socket.io.js [32m200 [0m0.339 ms - 62421[0m
[0mGET /javascripts/html.js [32m200 [0m0.338 ms - 2823[0m
[0mGET /javascripts/helper.js [32m200 [0m0.309 ms - 942[0m
[0mGET /javascripts/client-admin.js [32m200 [0m0.314 ms - 3336[0m
[0mGET /javascripts/socket.io/socket.io.js.map [32m200 [0m0.427 ms - 401944[0m
[Api] New client has connected!
[0mGET /clientAdmin [32m200 [0m1.704 ms - 1090[0m
[0mGET /stylesheets/common.css [32m200 [0m0.716 ms - 1273[0m
[0mGET /stylesheets/client-admin.css [32m200 [0m0.428 ms - 1136[0m
[0mGET /javascripts/socket.io/socket.io.js [32m200 [0m0.385 ms - 62421[0m
[0mGET /javascripts/html.js [32m200 [0m0.310 ms - 2823[0m
[0mGET /javascripts/helper.js [32m200 [0m0.326 ms - 942[0m
[0mGET /javascripts/client-admin.js [32m200 [0m0.348 ms - 3336[0m
[0mGET /javascripts/socket.io/socket.io.js.map [32m200 [0m0.530 ms - 401944[0m
[Api] New client has connected!
[0mGET /clientAdmin [32m200 [0m1.930 ms - 1090[0m
[0mGET /stylesheets/common.css [32m200 [0m0.937 ms - 1273[0m
[0mGET /stylesheets/client-admin.css [32m200 [0m0.671 ms - 1136[0m
[0mGET /javascripts/socket.io/socket.io.js [32m200 [0m0.327 ms - 62421[0m
[0mGET /javascripts/html.js [32m200 [0m0.325 ms - 2823[0m
[0mGET /javascripts/helper.js [32m200 [0m0.299 ms - 942[0m
[0mGET /javascripts/client-admin.js [32m200 [0m0.311 ms - 3336[0m
[0mGET /javascripts/socket.io/socket.io.js.map [32m200 [0m0.528 ms - 401944[0m
[Api] New client has connected!
[Api] Client has disconnected!
[0mGET /clientAdmin [32m200 [0m0.977 ms - 1090[0m
[0mGET /stylesheets/common.css [32m200 [0m0.503 ms - 1273[0m
[0mGET /stylesheets/client-admin.css [32m200 [0m0.443 ms - 1136[0m
[0mGET /javascripts/socket.io/socket.io.js [32m200 [0m0.354 ms - 62421[0m
[0mGET /javascripts/html.js [32m200 [0m0.466 ms - 2823[0m
[0mGET /javascripts/helper.js [32m200 [0m0.334 ms - 942[0m
[0mGET /javascripts/client-admin.js [32m200 [0m0.350 ms - 3336[0m
[0mGET /javascripts/socket.io/socket.io.js.map [32m200 [0m0.509 ms - 401944[0m
[Api] New client has connected!
[Api] Client has disconnected!
[0mGET /clientAdmin [32m200 [0m1.091 ms - 1090[0m
[0mGET /stylesheets/common.css [32m200 [0m0.492 ms - 1273[0m
[0mGET /stylesheets/client-admin.css [32m200 [0m0.380 ms - 1136[0m
[0mGET /javascripts/socket.io/socket.io.js [32m200 [0m0.324 ms - 62421[0m
[0mGET /javascripts/html.js [32m200 [0m0.349 ms - 2823[0m
[0mGET /javascripts/helper.js [32m200 [0m0.357 ms - 942[0m
[0mGET /javascripts/client-admin.js [32m200 [0m0.398 ms - 3336[0m
[Api] Client has disconnected!
[Api] Client has disconnected!
[0mGET /clientAdmin [32m200 [0m0.761 ms - 1090[0m
[0mGET /stylesheets/common.css [32m200 [0m0.386 ms - 1273[0m
[0mGET /stylesheets/client-admin.css [32m200 [0m0.346 ms - 1136[0m
[0mGET /javascripts/socket.io/socket.io.js [32m200 [0m0.384 ms - 62421[0m
[0mGET /javascripts/html.js [32m200 [0m0.459 ms - 2823[0m
[0mGET /javascripts/helper.js [32m200 [0m0.325 ms - 942[0m
[0mGET /javascripts/client-admin.js [32m200 [0m0.407 ms - 3336[0m
[0mGET /javascripts/socket.io/socket.io.js.map [32m200 [0m0.470 ms - 401944[0m
[Api] New client has connected!
[0mGET /clientAdmin [32m200 [0m0.917 ms - 1090[0m
[0mGET /stylesheets/common.css [32m200 [0m0.449 ms - 1273[0m
[0mGET /stylesheets/client-admin.css [32m200 [0m0.366 ms - 1136[0m
[0mGET /javascripts/socket.io/socket.io.js [32m200 [0m0.386 ms - 62421[0m
[0mGET /javascripts/html.js [32m200 [0m0.277 ms - 2823[0m
[0mGET /javascripts/helper.js [32m200 [0m0.286 ms - 942[0m
[0mGET /javascripts/client-admin.js [32m200 [0m0.363 ms - 3336[0m
[0mGET /javascripts/socket.io/socket.io.js.map [32m200 [0m1.048 ms - 401944[0m
[Api] New client has connected!
[Api] Client has disconnected!
[Api] Client has disconnected!

> client@0.0.0 start /home/lukaprij/UNIVERSITY-Diploma-Assignment
> node ./bin/www

[Database] Initializing
[App] Initializing
[Api] Initializing
[0mGET /clientAdmin [32m200 [0m10.189 ms - 1090[0m
[0mGET /stylesheets/common.css [32m200 [0m3.088 ms - 1273[0m
[0mGET /stylesheets/client-admin.css [32m200 [0m0.724 ms - 1136[0m
[0mGET /javascripts/socket.io/socket.io.js [32m200 [0m0.343 ms - 62421[0m
[0mGET /javascripts/html.js [32m200 [0m0.322 ms - 2823[0m
[0mGET /javascripts/helper.js [32m200 [0m0.372 ms - 942[0m
[0mGET /javascripts/client-admin.js [32m200 [0m0.343 ms - 3336[0m
[0mGET /javascripts/socket.io/socket.io.js.map [32m200 [0m0.541 ms - 401944[0m
[Api] New client has connected!
[0mGET /clientRenderer [36m304 [0m1.512 ms - -[0m
[0mGET /stylesheets/common.css [36m304 [0m0.808 ms - -[0m
[0mGET /stylesheets/client-renderer.css [36m304 [0m0.275 ms - -[0m
[0mGET /javascripts/socket.io/socket.io.js [36m304 [0m0.190 ms - -[0m
[0mGET /javascripts/threejs/three.js [36m304 [0m0.186 ms - -[0m
[0mGET /javascripts/threejs/RaytracingRenderer.js [36m304 [0m0.224 ms - -[0m
[0mGET /javascripts/threejs/RaytracingWorker.js [36m304 [0m0.232 ms - -[0m
[0mGET /javascripts/threejs/OrbitControls.js [36m304 [0m0.255 ms - -[0m
[0mGET /javascripts/html.js [36m304 [0m0.253 ms - -[0m
[0mGET /javascripts/helper.js [36m304 [0m0.246 ms - -[0m
[0mGET /javascripts/mouse.js [36m304 [0m0.220 ms - -[0m
[0mGET /javascripts/debug.js [36m304 [0m0.193 ms - -[0m
[0mGET /javascripts/client-renderer.js [36m304 [0m0.260 ms - -[0m
[Api] New client has connected!
[Api] Progress was updated
[Api] Progress was updated
[Api] Client has disconnected!
[0mGET /clientAdmin [32m200 [0m1.558 ms - 1090[0m
[Api] Client has disconnected!
[0mGET /stylesheets/common.css [32m200 [0m5002.839 ms - 1273[0m
[0mGET /stylesheets/client-admin.css [32m200 [0m5004.900 ms - 1136[0m
[0mGET /javascripts/html.js [32m200 [0m5004.930 ms - 2823[0m
[0mGET /javascripts/helper.js [32m200 [0m5005.024 ms - 942[0m
[0mGET /javascripts/client-admin.js [32m200 [0m5005.112 ms - 3336[0m
[0mGET /javascripts/socket.io/socket.io.js [32m200 [0m5004.953 ms - 62421[0m
[0mGET /javascripts/socket.io/socket.io.js.map [32m200 [0m0.562 ms - 401944[0m
[Api] New client has connected!
